--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -62,7 +62,7 @@
             <li class="nav-item">
               <a href="/orderDetails" class="nav-link">Orders</a>
             </li>
-            <li class="nav-item"><a href="" class="nav-link">contact</a></li>
+            <li class="nav-item"><a href="/contact" class="nav-link">contact</a></li>
             <li class="nav-item">
               <a href="/logout" class="nav-link">Logout</a>
             </li>
