--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -47,7 +47,7 @@
 				  <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="/shop" class="nav-link">Shop</a></li>
           <li class="nav-item"><a href="/orderDetails" class="nav-link">Orders</a></li>
-          <li class="nav-item"><a href="" class="nav-link">contact</a></li>
+          <li class="nav-item"><a href="/contact" class="nav-link">contact</a></li>
         <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
 				  <li class="nav-item cta cta-colored">
 					<a href="/viewcart" class="nav-link"
